[package]
name = "pid"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A simple process manager. It can list and kill processes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
sysinfo = "0.28.4"
